--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,20 +1,20 @@
 h1 {
     border-bottom: 2px solid black;
-    
     display: flex;
 }
 
 .title {
     justify-content: center;
     margin-top: 2rem;
+    margin-left: 10rem;
 }
 
 .about-container {
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-left: 10rem;
-    margin-right: 10rem;
+    /* margin-left: 10rem;
+    margin-right: 10rem; */
 }
 
 
@@ -33,3 +33,16 @@ h1 {
 .link:hover {
    background-color: rosybrown;
 } 
+
+
+@media only screen and (max-width: 600px) {
+    .about-container > p {
+        margin-left: 3rem;
+        margin-right: 3rem;
+    }
+}
+
+.sm-txt {
+    justify-content: left;
+    text-align: left;
+}
