--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -3,10 +3,10 @@
     --input-padding-y: .75rem;
   }
   
-  body {
+  /* body {
     background: #007bff;
     background: linear-gradient(to right, #0062E6, #33AEFF);
-  }
+  } */
   
   .card-signin {
     border: 0;
@@ -99,12 +99,12 @@
     color: #777;
   }
   
-  .btn-google {
+  form > .btn-google {
     color: white;
     background-color: #ea4335;
   }
   
-  .btn-facebook {
+  form > .btn-facebook {
     color: white;
     background-color: #3b5998;
   }
